--- a/app/assets/stylesheets/bootstrap-custom.scss
+++ b/app/assets/stylesheets/bootstrap-custom.scss
@@ -6,7 +6,7 @@
 
 // 2. Include any default variable overrides here
 
-$bg_color1: #05668D;
+$bg_color1: #ff6b45;
 $bg_color2: #028090;
 $bg_color3: #00A896;
 $bg_color4: #02C39A;
@@ -17,7 +17,7 @@ $bg_color8: #615055;
 $bg_color9: #FFDD4A;
 
 $theme-colors: (
-  "primary":    #05668D,
+  "primary":    #ff6b45,
   "secondary":  #028090,
   "success":    #00A896,
   "info":       #02C39A,
