--- a/app/assets/stylesheets/rails.scss
+++ b/app/assets/stylesheets/rails.scss
@@ -114,9 +114,9 @@ div {
     color: #105cb6;
     border: 1px solid #9aafe5;
     &.hover, &.focus {
-      color: navy;
+      color: #ff6b45;
       background: lightyellow;
-      border-color: navy; } }
+      border-color: #ff6b45; } }
   em {
     color: #3f3f3f;
     border: 1px solid #bbbbbb;
