--- a/app/assets/stylesheets/lists.css.scss
+++ b/app/assets/stylesheets/lists.css.scss
@@ -9,7 +9,7 @@
 
 .lists {
   i.fa { font-size: 130% }
-  a:hover { background:none; color:#0033cc }
+  a:hover { background:none; color:#ff6b45 }
   .list_icon { opacity: 0.5; }
   img.input_info { vertical-align: middle; }
   .list_save {
