Improvements Validations/Styles/Icons

--- a/app/assets/stylesheets/advanced_search.css.scss
+++ b/app/assets/stylesheets/advanced_search.css.scss
@@ -39,8 +39,8 @@
     margin-right: 30px;
   }
   .options a {
-    border-bottom: 1px dotted darkCyan;
-    color: darkCyan;
+    border-bottom: 1px dotted darkcyan;
+    color: darkOrange;
     text-decoration: none;
   }
 
