--- a/app/assets/stylesheets/base.scss
+++ b/app/assets/stylesheets/base.scss
@@ -63,7 +63,7 @@ a.btn, a.btn-sm {
 #options {
   a {
     border-bottom: 1px dotted darkcyan;
-    color: darkcyan;
+    color: #000000;
     text-decoration: none;
     &:hover {
       background: $color_body;
