--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -110,6 +110,8 @@ $sidebar_width: 210px;
   color: #3f3f3f;
   font-size: 0.9em;
   padding-top: 1rem;
+  background-color: #fff;
+  border-right: 1px solid;
   }
 
 .form {
@@ -792,4 +794,167 @@ table.asset_attributes {
   .form-check {
     padding-left: 6px;
   }
+}
+
+.testTOCheck{
+  display: flex;
+  justify-content: space-between;
+}
+
+.testBox{
+  background-color: rgb(255, 255, 255);
+  box-shadow: 2px 2px 20.1px rgba(0, 0, 0, 0.5);
+  width: 46%;
+  height: auto;
+  border-radius: 10px;
+  padding: 22px;
+}
+
+.testBoxLarge{
+  background-color: rgb(255, 255, 255);
+  box-shadow: 2px 2px 20.1px rgba(0, 0, 0, 0.5);
+  width: 99%;
+  height: 300px;
+  border-radius: 10px;
+  padding: 10px;
+}
+
+.leadsBoxContainer{
+  background-color: rgb(255, 255, 255);
+  box-shadow: 2px 2px 20.1px rgba(0, 0, 0, 0.5);
+  width: 99%;
+  height: 500px;
+  border-radius: 10px;
+  padding: 10px;
+}
+
+.mar-r{
+  margin-right: 10px;
+}
+
+.mt-2{
+  margin-top: 20px;
+}
+
+.mt-1{
+  margin-top: 10px;
+}
+
+.theadLeads{
+  background-color: #ECEBEB;
+}
+
+.p-14{
+  padding: 14px;
+}
+
+.flex-center{
+  display: flex;
+  justify-content: center;
+}
+
+.font-orange-20{
+  color: #F26B48;
+  font-size: 20px;
+}
+
+.inputDate{
+  height: 35px;
+}
+
+.fs-14{
+font-size: 14px;
+}
+
+.tableBorder{
+  border: 1px solid black;
+  margin-top: 10px;
+  border-radius: 10px;
+  width: 100%; 
+}
+
+.tableBorderLeads{
+  border: 1px solid black;
+  margin-top: 40px;
+  border-radius: 10px;
+  width: 100%; 
+  
+}
+
+.ovalStatusPendind{
+  background-color: #c74343;
+  border-radius: 20px;
+}
+
+.ovalStatusOkey{
+  background-color: #00A896;
+  border-radius: 20px;
+}
+
+.flex{
+  display: flex;
+}
+
+.iconOrangeCircle{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background-color: #00A896;
+}
+
+.m0{
+  margin: 0px;
+}
+
+.sideBarBoxIcon{
+  background-color: #D9D9D9;
+    padding: 10px;
+    border-radius: 4px;
+
+}
+
+.nav-link:hover {
+  display: block;
+  padding: 0.5rem 1rem;
+  color: #000000 !important;
+  text-decoration: none;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out;
+}
+
+.userDashboard{
+  background-color: #D9D9D9;
+  padding: 20px;
+  display: flex;
+  border-radius: 10px;
+}
+
+.userBox{
+  padding-top: 45px;
+}
+
+.borderBottomLeads{
+  padding: 15px;
+    border-bottom: 1px solid
+}
+
+.heightInputsCustom{
+  height: 35px;
+}
+
+.input-with-icon {
+  position: relative;
+}
+
+.input-with-icon i.fa {
+  position: absolute;
+  right: 85%;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.cell-content {
+  padding: 20px;
 }
