--- a/app/views/layouts/_tabbed.html.haml
+++ b/app/views/layouts/_tabbed.html.haml
@@ -1,13 +1,13 @@
-.navbar.navbar-expand-lg.tabs
-  .container-fluid
-    %button{"class" => "navbar-toggler", "type" => "button", "data-bs-toggle" => "collapse", "data-bs-target" => "#navbarNav", "aria-controls" => "navbarNav", "aria-expanded" => "false", "aria-label" => "Toggle navigation"}
-      %span.navbar-toggler-icon
-    %ul.navbar-nav.collapse.navbar-collapse.me-auto.mb-2.mg-lg-0{id:"navbarNav"}
-      - tabs.each do |tab|
-        %li.nav-item
-          = link_to(tab[:url], class: tab[:active] ? "nav-link active" : "nav-link") do
-            %i.fa{class: tab[:icon]}
-            = t(tab[:text])
+-# .navbar.navbar-expand-lg.tabs
+-#   .container-fluid
+-#     %button{"class" => "navbar-toggler", "type" => "button", "data-bs-toggle" => "collapse", "data-bs-target" => "#navbarNav", "aria-controls" => "navbarNav", "aria-expanded" => "false", "aria-label" => "Toggle navigation"}
+-#       %span.navbar-toggler-icon
+-#     %ul.navbar-nav.collapse.navbar-collapse.me-auto.mb-2.mg-lg-0{id:"navbarNav"}
+-#       - tabs.each do |tab|
+-#         %li.nav-item
+-#           = link_to(tab[:url], class: tab[:active] ? "nav-link active" : "nav-link") do
+-#             %i.fa{class: tab[:icon]}
+-#             = t(tab[:text])
 
 = show_flash
 %div{ id: 'primary-application-pane' }
@@ -16,3 +16,4 @@
       = render "layouts/sidebar"
     %div{ class: 'main', id: :main }
       = yield
+      
